Bug 47632 - EDITING: Large graph
Summary: EDITING: Large graph
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.1 release
Hardware: All Linux (All)
: high normal
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA target:3.6.0 target:3.5.3
Keywords:
: 48717 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-20 23:40 UTC by Petr Nemec
Modified: 2012-04-16 09:26 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Some graph wich is not editable in LibreOffice 3.5 and newer (66.84 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-03-20 23:40 UTC, Petr Nemec
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Petr Nemec 2012-03-20 23:40:50 UTC
Created attachment 58791 [details]
Some graph wich is not editable in LibreOffice 3.5 and newer

Problem description: 

I have graph with more then 2x400 value created in older LibreOffice, when I want edit them, Calc fall down. In older LibreOffice, still working properly.

Steps to reproduce:

1. Open graph with lot of values in Calc 
2. Try edit them (doubleclick/right click-edit)

Platform (if different from the browser): 

Linux, Ubuntu 12.04
              
Browser:Chrome/17.0.963.79
Comment 1 Not Assigned 2012-03-23 18:21:37 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8a6552c0c0464d467a785cfd9c864301b81591cb

use fabs for double values, not abs, fdo#47632
Comment 2 Not Assigned 2012-03-23 20:16:02 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=62cd23f0cf538dccc30f1a38578d4c5925703029&g=libreoffice-3-5

use fabs for double values, not abs, fdo#47632


It will be available in LibreOffice 3.5.3.
Comment 3 Rainer Bielefeld Retired 2012-03-24 08:37:20 UTC
Closed because Patch is available for 3.5, 3.6 and no backport to 3.4 will be done because 3.4 lifecycle is terminated.
Comment 4 Rainer Bielefeld Retired 2012-04-05 08:13:31 UTC
I added Fix submitter as assignee because this will ease queries and bug tracking.
Comment 5 Markus Mohrhard 2012-04-16 09:26:26 UTC
*** Bug 48717 has been marked as a duplicate of this bug. ***