use fabs for double values, not abs, fdo#47632

Signed-off-by: Kohei Yoshida <kohei.yoshida@gmail.com>